[gd_scene load_steps=8 format=3 uid="uid://dugwtiix35yu2"]

[ext_resource type="Script" path="res://Stage.gd" id="1_nvnh8"]
[ext_resource type="Texture2D" uid="uid://cryylulirjn2d" path="res://assets/popup_background.png" id="2_xulki"]
[ext_resource type="Texture2D" uid="uid://cj0avjaofdsd1" path="res://assets/close_btn_normal.png" id="3_00sdx"]
[ext_resource type="Texture2D" uid="uid://bbr1ydo557c7a" path="res://assets/close_btn_pressed.png" id="4_emv5t"]
[ext_resource type="Texture2D" uid="uid://hnymb5j22vyt" path="res://assets/bar.png" id="5_td25e"]
[ext_resource type="Texture2D" uid="uid://dvphsjl03frry" path="res://assets/hp_bar.png" id="6_t2nsp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bajaj"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Stage" type="CanvasLayer"]
script = ExtResource("1_nvnh8")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 281.0
offset_top = 37.0
offset_right = 957.0
offset_bottom = 733.0
texture = ExtResource("2_xulki")

[node name="TextureButton" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 555.0
offset_top = 85.0
offset_right = 587.0
offset_bottom = 117.0
texture_normal = ExtResource("3_00sdx")
texture_pressed = ExtResource("4_emv5t")
texture_hover = ExtResource("4_emv5t")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 92.0
offset_top = 85.0
offset_right = 591.0
offset_bottom = 137.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "MAP NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 98.0
offset_top = 546.0
offset_right = 585.0
offset_bottom = 605.0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_bajaj")
text = "NPC 잡기"

[node name="TextureRect" type="TextureRect" parent="TextureRect"]
layout_mode = 0
offset_left = 418.0
offset_top = 127.0
offset_right = 602.0
offset_bottom = 281.0
texture = ExtResource("2_xulki")
expand_mode = 1

[node name="Label" type="Label" parent="TextureRect/TextureRect"]
layout_mode = 0
offset_left = 33.0
offset_top = 21.0
offset_right = 150.0
offset_bottom = 47.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "플레이어 상태"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureProgressBar" type="TextureProgressBar" parent="TextureRect/TextureRect"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 0
offset_left = 30.0
offset_top = 49.0
offset_right = 270.0
offset_bottom = 109.0
scale = Vector2(0.5, 0.5)
value = 30.0
texture_under = ExtResource("5_td25e")
texture_progress = ExtResource("6_t2nsp")

[node name="HpLabel" type="Label" parent="TextureRect/TextureRect"]
layout_mode = 0
offset_left = 25.0
offset_top = 78.0
offset_right = 159.0
offset_bottom = 101.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Hp : [ 10 / 200 ]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="TextureRect"]
layout_mode = 0
offset_left = 62.0
offset_top = 100.0
offset_right = 458.0
offset_bottom = 565.0
texture = ExtResource("2_xulki")
expand_mode = 1

[node name="ScrollContainer3" type="ScrollContainer" parent="TextureRect/TextureRect2"]
layout_mode = 0
offset_left = 50.0
offset_top = 92.0
offset_right = 346.0
offset_bottom = 412.0

[node name="CombatContainer" type="VBoxContainer" parent="TextureRect/TextureRect2/ScrollContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TextureRect/TextureRect2/ScrollContainer3/CombatContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "슬라임을 쓰러트렸습니다."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="TextureRect/TextureRect2/ScrollContainer3/CombatContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "슬라임을 쓰러트렸습니다."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="TextureRect/TextureRect2"]
layout_mode = 0
offset_left = 53.0
offset_top = 56.0
offset_right = 348.0
offset_bottom = 82.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "전투 로그"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect3" type="TextureRect" parent="TextureRect"]
layout_mode = 0
offset_left = 418.0
offset_top = 261.0
offset_right = 600.0
offset_bottom = 410.0
texture = ExtResource("2_xulki")
expand_mode = 1

[node name="Label3" type="Label" parent="TextureRect/TextureRect3"]
layout_mode = 0
offset_left = 44.0
offset_top = 16.0
offset_right = 135.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "아이템 파밍 현황"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer2" type="ScrollContainer" parent="TextureRect/TextureRect3"]
layout_mode = 0
offset_left = 26.0
offset_top = 38.0
offset_right = 149.0
offset_bottom = 126.0

[node name="ItemFarmingContainer" type="VBoxContainer" parent="TextureRect/TextureRect3/ScrollContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect4" type="TextureRect" parent="TextureRect"]
layout_mode = 0
offset_left = 418.0
offset_top = 390.0
offset_right = 600.0
offset_bottom = 542.0
texture = ExtResource("2_xulki")
expand_mode = 1

[node name="Label2" type="Label" parent="TextureRect/TextureRect4"]
layout_mode = 0
offset_left = 51.0
offset_top = 16.0
offset_right = 130.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "남은 NPC 현황"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="TextureRect/TextureRect4"]
layout_mode = 0
offset_left = 25.0
offset_top = 35.0
offset_right = 158.0
offset_bottom = 131.0

[node name="NpcContainer" type="VBoxContainer" parent="TextureRect/TextureRect4/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TextureRect/TextureRect4/ScrollContainer/NpcContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "슬라임 : 10마리"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="TextureRect/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="TextureRect/Button" to="." method="_on_button_pressed"]
